--- a/elearning-core/css/default.css
+++ b/elearning-core/css/default.css
@@ -15,7 +15,38 @@ body {
 footer {
     flex-shrink: 0
 }
-
+.homepage-blog-posts .post-image-container img {
+    height: 230px;
+}
+.product-items.productList .product-item .img a {
+    position: initial;
+}
+.product-items.productList .product-item .img {
+    border:1px solid #ececec;
+}
+.product-items.productList .product-item .product-content {
+    text-align: left;
+}
+.homepage-blog-posts div#postContent {
+    height: 129px;
+}
+.product-items.productList .product-item .action {
+    text-align: right;
+}
+.product-items.productList .product-item-container {
+    border: none;
+}
+@media(max-width:767px){
+	.homepage-blog-posts div#postContent{
+		height:auto;
+	}
+}
+@media (max-width: 991px){
+.product-items.productList .product-item .img {
+    padding-right: 0;
+    width: 32%;
+}
+}
 body {
     font-family: roboto,sans-serif;
     background: #fff;
